fixed horizontal white line bug on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   scroll-behavior: smooth;
   font-size: 14px;
   overflow-x: hidden;
+  background: #232323;
 }
 body {
   font-family: "Raleway", sans-serif;
